--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,25 +1,24 @@
-<div style="text-align:center">
-    <h1>
-        School of AI - Health Hackathon 2019
-    </h1>
-</div>
-
-<div class="total-risk-container" [ngClass]="{ 'low': totalRisk <= 30, 'medium': totalRisk > 30 && totalRisk <= 70, 'high': totalRisk > 70 }">
-    <div class="content">
-        <p class="label">Total risk</p>
-        <p class="value">{{ totalRisk }}%</p>
+<div class="app-body">
+    <div class="logo-container">
+        <img src="assets/logo-dark.png">
     </div>
-</div>
-
-<div class="charts-container">
-    <ngx-gauge *ngFor="let data of chartDatas;"
-        [type]="data.gaugeType"
-        [value]="data.gaugeValue"
-        [label]="data.gaugeLabel"
-        [append]="data.gaugeAppendText"
-        [thresholds]="thresholdConfig"
-        [size]=150
-        [thick]=12
-        [duration]=500 >
-    </ngx-gauge>
+    
+    <div class="total-risk-container" [ngClass]="{ 'low': totalRiskVal <= 33, 'medium': totalRiskVal > 33 && totalRiskVal <= 66, 'high': totalRiskVal > 66 }">
+        <div class="content">
+            <p class="value">{{ totalRiskTxt }}</p>
+        </div>
+    </div>
+    
+    <div class="charts-container">
+        <ngx-gauge *ngFor="let data of chartDatas;"
+            [type]="data.gaugeType"
+            [value]="data.gaugeValue"
+            [label]="data.gaugeLabel"
+            [append]="data.gaugeAppendText"
+            [thresholds]="thresholdConfig"
+            [size]=150
+            [thick]=12
+            [duration]=500 >
+        </ngx-gauge>
+    </div>
 </div>
