--- a/web/src/app/app.component.css
+++ b/web/src/app/app.component.css
@@ -1,5 +1,9 @@
-body {
-    font-family: monospace;
+.logo-container {
+    text-align: center;
+}
+
+.logo-container img {
+    height: 150px;
 }
 
 .charts-container, .total-risk-container {
@@ -9,14 +13,16 @@ body {
 
 ngx-gauge {
     margin: 15px;
+    background-color: rgb(86, 86, 86);
+    border-radius: 50%;
+    color: white
 }
 
 .total-risk-container {
-    width: 200px;
-    height: 200px;
     border-radius: 50%;
-    margin: 30px auto;
-    background-color: black;
+    margin: 60px auto 30px auto;
+    height: 250px;
+    width: 250px;
 }
 
 .total-risk-container .content {
@@ -43,5 +49,5 @@ ngx-gauge {
 }
 
 .total-risk-container .content .value {
-    font-size: 3em;
+    font-size: 4.5em;
 }
